# serializer version: 1
# name: test_golden_standardized_i7_per_family[parse-call]
  dict({
    'kind': 'parse',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': 'gen_parse_call_000.bpl',
      'line': 3,
      'symbol': None,
    }),
    'native_message': '''
      procedure calls are outside the accepted M1 subset
      call helper_0(x);
    ''',
    'obligation_ref': None,
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_golden_standardized_i7_per_family[parse-if]
  dict({
    'kind': 'parse',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': 'gen_parse_if_000.bpl',
      'line': 3,
      'symbol': None,
    }),
    'native_message': '''
      'if' is outside the accepted M1 subset (straight-line + while only)
      if x > 1 {
    ''',
    'obligation_ref': None,
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_golden_standardized_i7_per_family[parse-stray]
  dict({
    'kind': 'parse',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': 'gen_parse_stray_000.bpl',
      'line': 3,
      'symbol': None,
    }),
    'native_message': '''
      expected identifier
      assert x > 1;;
    ''',
    'obligation_ref': None,
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_golden_standardized_i7_per_family[parse-type]
  dict({
    'kind': 'parse',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': 'gen_parse_type_000.bpl',
      'line': 1,
      'symbol': None,
    }),
    'native_message': '''
      type 'multiset' is outside the accepted subset (use int/bool/real/[T]T/seq<T>)
      procedure p_type_0(v: multiset<int>)
    ''',
    'obligation_ref': None,
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_golden_standardized_i7_per_family[parse-uninterp]
  dict({
    'kind': 'parse',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': 'gen_parse_uninterp_000.bpl',
      'line': None,
      'symbol': None,
    }),
    'native_message': "uninterpreted function 'f_0' has no definition body; calling definition-less functions is outside the accepted M1 subset",
    'obligation_ref': None,
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_golden_standardized_i7_per_family[refuted-bound]
  dict({
    'kind': 'unproved',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': None,
      'line': None,
      'symbol': None,
    }),
    'native_message': 'obligation refuted: backend z3 satisfied the negated goal; a counterexample valuation (I6) accompanies this diagnostic',
    'obligation_ref': 'uvil:obligation@1:219be675a46a0b9a50b4fc0e82cc5fed9f6466c44b0857ed8cd7ab3d92b79e3e',
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_golden_standardized_i7_per_family[refuted-linear]
  dict({
    'kind': 'unproved',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': None,
      'line': None,
      'symbol': None,
    }),
    'native_message': 'obligation refuted: backend z3 satisfied the negated goal; a counterexample valuation (I6) accompanies this diagnostic',
    'obligation_ref': 'uvil:obligation@1:cec514ffd104a8c6638f3a3f4ef876584b1c42150f2ee90957f30d07ebecf630',
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_golden_standardized_i7_per_family[unknown-nonlinear]
  dict({
    'kind': 'timeout',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': None,
      'line': None,
      'symbol': None,
    }),
    'native_message': 'backend z3 returned timeout within budget 1000ms',
    'obligation_ref': 'uvil:obligation@1:460af28b5cdf9b1b46131f918aca72b89404dbd3df1b520fab879dd8be56c314',
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_golden_timeout_i7_family
  dict({
    'kind': 'timeout',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': None,
      'line': None,
      'symbol': None,
    }),
    'native_message': 'backend z3 returned timeout within budget 300ms',
    'obligation_ref': 'uvil:obligation@1:28fb520c613e01d25e26b0bdb325d9188a6d0e15ee563880033af33f7c63dedc',
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_refuted_entries_produce_i6_and_i7_through_check[refuted-bound]
  dict({
    'backend_witness': dict({
      'format': 'smt-lib2-model',
    }),
    'counter_spec': None,
    'kind': 'valuation',
    'obligation_ref': 'uvil:obligation@1:219be675a46a0b9a50b4fc0e82cc5fed9f6466c44b0857ed8cd7ab3d92b79e3e',
    'scenario': None,
    'trace': None,
    'uvil_type': 'counterexample',
    'valuation': dict({
      'x': dict({
        'args': list([
          0,
        ]),
        'op': 'const',
      }),
    }),
  })
# ---
# name: test_refuted_entries_produce_i6_and_i7_through_check[refuted-bound].1
  dict({
    'kind': 'unproved',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': None,
      'line': None,
      'symbol': None,
    }),
    'native_message': 'obligation refuted: backend z3 satisfied the negated goal; a counterexample valuation (I6) accompanies this diagnostic',
    'obligation_ref': 'uvil:obligation@1:219be675a46a0b9a50b4fc0e82cc5fed9f6466c44b0857ed8cd7ab3d92b79e3e',
    'uvil_type': 'diagnostic',
  })
# ---
# name: test_refuted_entries_produce_i6_and_i7_through_check[refuted-linear]
  dict({
    'backend_witness': dict({
      'format': 'smt-lib2-model',
    }),
    'counter_spec': None,
    'kind': 'valuation',
    'obligation_ref': 'uvil:obligation@1:cec514ffd104a8c6638f3a3f4ef876584b1c42150f2ee90957f30d07ebecf630',
    'scenario': None,
    'trace': None,
    'uvil_type': 'counterexample',
    'valuation': dict({
      'a': dict({
        'args': list([
          1,
        ]),
        'op': 'const',
      }),
    }),
  })
# ---
# name: test_refuted_entries_produce_i6_and_i7_through_check[refuted-linear].1
  dict({
    'kind': 'unproved',
    'llm_explanation': None,
    'loc': dict({
      'col': None,
      'file': None,
      'line': None,
      'symbol': None,
    }),
    'native_message': 'obligation refuted: backend z3 satisfied the negated goal; a counterexample valuation (I6) accompanies this diagnostic',
    'obligation_ref': 'uvil:obligation@1:cec514ffd104a8c6638f3a3f4ef876584b1c42150f2ee90957f30d07ebecf630',
    'uvil_type': 'diagnostic',
  })
# ---
